tests/fsharp/typecheck/sigs/neg77.bsl

neg77.fsx(134,15,134,16): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (133:19). Try indenting this token further or using standard formatting conventions.

neg77.fsx(134,15,134,16): parse error FS0010: Unexpected symbol '|' in expression
